# iii-anime

./: .dockerignore  .gitignore  .kimi-work.md  .mcp.json  .prettierignore  Cargo.toml  INTEGRATIONS.md  Makefile  README.md  biome.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.claude-plugin/: marketplace.json  plugin.json
app-studio/: BUILD-BACKENDS.md  COST-MODEL.md  DESIGN.md  IDEMPOTENCY-RESUME.md  P0-DETAIL.md  README.md  SANDBOX-AND-BUILD-LOOP.md  local.yml  package.json  tsconfig.json
apps/anime-studio/: .gitignore  README.md  anime_studio.toml  pyproject.toml
apps/anime-studio/src/anime_studio/: __init__.py  __main__.py  cli.py  config.py  logging.py
apps/anime-studio/src/anime_studio/agents/: __init__.py  base.py  character.py  director.py  distribution.py  editing.py  planning.py  production.py  qa.py  script.py  storyboard.py
apps/anime-studio/src/anime_studio/knowledge/: __init__.py  loader.py
apps/anime-studio/src/anime_studio/knowledge/data/: animation_principles.yaml  audio_design.yaml  camera_vocab.yaml  color_psychology.yaml  composition.yaml  editing_tempo.yaml  emotion_metaphor.yaml  hooks_catalog.yaml  lighting_moods.yaml  platform_specs.yaml  script_beats.yaml  story_frameworks.yaml  tooling_map.yaml  virality.yaml
apps/anime-studio/src/anime_studio/models/: __init__.py  artifacts.py  brief.py  character.py  distribution.py  edit.py  job.py  operations.py  prompts.py  qa.py  script.py  storyboard.py
apps/anime-studio/src/anime_studio/operations/: __init__.py  batch.py  feedback.py  ledger.py
apps/anime-studio/src/anime_studio/pipeline/: __init__.py  bible.py  dag.py  orchestrator.py  writer.py
apps/anime-studio/src/anime_studio/providers/: __init__.py  base.py  registry.py  types.py
apps/anime-studio/src/anime_studio/providers/anthropic/: __init__.py  llm.py
apps/anime-studio/src/anime_studio/providers/ffmpeg/: __init__.py  audio.py  edit.py
apps/anime-studio/src/anime_studio/providers/hosted/: __init__.py  _http.py  audio.py  image.py  video.py
apps/anime-studio/src/anime_studio/providers/mock/: __init__.py  audio.py  edit.py  image.py  llm.py  video.py
apps/anime-studio/src/anime_studio/render/: __init__.py  animatic.py  audio_mix.py  clips.py  frames.py
apps/anime-studio/src/anime_studio/worker/: __init__.py  functions.py  main.py  progress.py
apps/anime-studio/tests/: conftest.py  test_agents.py  test_audio_mix.py  test_cli.py  test_director_dag.py  test_knowledge.py  test_models.py  test_operations.py  test_pipeline_e2e.py  test_providers.py  test_providers_hosted_audio.py  test_providers_hosted_image.py  test_providers_hosted_video.py  test_qa_gates.py  test_render.py  test_render_clips.py  test_worker_registration.py
apps/anime-studio/tests/fixtures/: sample_brief.json  sample_brief.yaml  slate.yaml
apps/arbitrage/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/arbitrage/config/: default.yaml
apps/arbitrage/docs/: architecture.md  compliance.md
apps/arbitrage/src/: config.py
apps/arbitrage/src/analysis/: analyzer.py
apps/arbitrage/src/classify/: classifier.py
apps/arbitrage/src/domain/: models.py
apps/arbitrage/src/fx/: calculator.py  provider.py
apps/arbitrage/src/ledger/: export.py
apps/arbitrage/src/listing/: draft.py  seo.py
apps/arbitrage/src/notify/: telegram.py
apps/arbitrage/src/research/: ebay.py  offline.py
apps/arbitrage/src/shipping/: estimator.py
apps/arbitrage/src/sourcing/: offline.py
apps/arbitrage/src/worker/: analysis.py  app.py  fulfillment.py  handlers.py  lifecycle.py  monitoring.py  orchestration.py  oversight.py  serializers.py  services.py  store.py
apps/arbitrage/tests/: test_analysis.py  test_classify.py  test_fx.py  test_handlers.py  test_monitoring.py  test_oversight.py  test_phase6.py  test_pipeline.py  test_shipping_seo.py  test_worker.py
apps/arbitrage/tests/e2e/: test_e2e.py
apps/ec/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/ec/docs/: SOP.md  situation_overview.md
apps/ec/prompts/: product_description.md  seo_optimization.md
apps/ec/scripts/: generate_report.py  run_analytics.py  run_batch.py  run_full_pipeline.py  run_pipeline.py
apps/ec/src/: config.py  pipeline.py
apps/ec/src/analytics/: __init__.py  demand_analyzer.py  price_tracker.py
apps/ec/src/io/: __init__.py  product_loader.py
apps/ec/src/listing/: __init__.py  mercari.py  podtomatic.py  shopify.py
apps/ec/src/product/: __init__.py  copyright_checker.py  generator.py  models.py
apps/ec/src/worker/: __init__.py  app.py  handlers.py  offline.py  orchestration.py  remote.py  serializers.py  services.py  store.py
apps/ec/tests/: test_analytics.py  test_copyright_checker.py  test_io_product_loader.py  test_listing_mercari.py  test_listing_podtomatic.py  test_listing_shopify.py  test_pipeline.py  test_product_generator.py  test_worker.py
apps/ec/tests/e2e/: test_engine_e2e.py
claude-plugin/: README.md
community-skills/: README.md
deploy/: config.yaml  docker-compose.yml  engine.Dockerfile
docs/: docs.json  package.json
engine/: Cargo.toml
scripts/: arb-e2e.sh  ec-e2e.sh  generate-skills-index.py  import-awesome-lists.py  qudag-mcp.sh  (+3 more)
sdlc-prompt-gen/: .gitignore  .mcp.json  .mcp.local.json  README.md  pyproject.toml
sdlc-prompt-gen/.claude/commands/: sdlc-auto.md  sdlc-phase-1.md  sdlc-phase-10.md  sdlc-phase-2.md  sdlc-phase-3.md  sdlc-phase-4.md  sdlc-phase-5.md  sdlc-phase-6.md  sdlc-phase-7.md  sdlc-phase-8.md  sdlc-phase-9.md
sdlc-prompt-gen/src/sdlc_prompt_gen/: __init__.py  phases.py  server.py
sdlc-prompt-gen/src/sdlc_prompt_gen/detect/: __init__.py  phase_detector.py
sdlc-prompt-gen/src/sdlc_prompt_gen/generators/: __init__.py  builder.py
sdlc-prompt-gen/src/sdlc_prompt_gen/templates/: phase-1.md  phase-10.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
sdlc-prompt-gen/src/sdlc_prompt_gen/vault/: __init__.py  store.py
sdlc-prompt-gen/tests/: test_cli.py  test_generate_prompt.py  test_vault.py
(+395 files in other folders)
