[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdlc-prompt-gen"
version = "0.1.0"
description = "SDLC 10フェーズのプロンプト生成 MCP サーバー"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "iii-anime" }]
keywords = ["mcp", "sdlc", "prompt", "claude-code"]
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
sdlc-prompt-gen = "sdlc_prompt_gen.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sdlc_prompt_gen"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
