[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anime-studio"
version = "0.1.0"
description = "AI anime production automation pipeline (studio-as-a-company) on iii"
authors = [{ name = "iii-anime" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["anime", "automation", "pipeline", "iii", "agents"]
dependencies = [
    "iii-sdk",
    "iii-observability",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "types-PyYAML",
]

[tool.uv.sources]
iii-sdk = { path = "../../sdk/packages/python/iii", editable = true }
iii-observability = { path = "../../sdk/packages/python/observability", editable = true }

[project.scripts]
anime-studio = "anime_studio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_studio"]

[tool.hatch.build.targets.wheel.force-include]
"src/anime_studio/knowledge/data" = "anime_studio/knowledge/data"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

# Optional / stub-less third-party modules.
[[tool.mypy.overrides]]
module = ["tomllib", "tomli", "anthropic", "iii", "iii.*", "iii_observability"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src/anime_studio --cov-branch --cov-report=term-missing"
testpaths = ["tests"]
